# serializer version: 1
# name: test_zephyr_codegen_golden[esp_bme680][esp_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[esp_iot_device][esp_iot_device]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_a][wemos_a]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
  
    ''',
    'prj.conf': '''
      # Generated by demol
  
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_bme680][wemos_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_bme680_alert][wemos_bme680_alert]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_button][wemos_button]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_GPIO=y
  
    ''',
    'src/button.c': '''
      /*
       * Zephyr tactile button driver (GPIO input with interrupt).
       * Generated by demol — uses Zephyr's gpio_dt_spec + gpio_add_callback.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "button.h"
      
      static const struct gpio_dt_spec button = GPIO_DT_SPEC_GET(DT_INST(0, gpio_keys), gpios);
      static struct gpio_callback button_cb;
      static void (*button_user_cb)(void);
      
      static void button_pressed(const struct device *dev, struct gpio_callback *cb, uint32_t pins)
      {
          ARG_UNUSED(dev);
          ARG_UNUSED(cb);
          ARG_UNUSED(pins);
          if (button_user_cb) {
              button_user_cb();
          }
      }
      
      int button_init(void (*callback)(void))
      {
          int ret;
      
          if (!gpio_is_ready_dt(&button)) {
              return -ENODEV;
          }
      
          button_user_cb = callback;
      
          ret = gpio_pin_configure_dt(&button, GPIO_INPUT);
          if (ret < 0) {
              return ret;
          }
      
          gpio_init_callback(&button_cb, button_pressed, BIT(button.pin));
          ret = gpio_add_callback(button.port, &button_cb);
          if (ret < 0) {
              return ret;
          }
      
          return gpio_pin_interrupt_configure_dt(&button, GPIO_INT_EDGE_TO_ACTIVE);
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_srf05][wemos_srf05]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_GPIO=y
  
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
              return 0;
      }
  
    ''',
    'src/srf05.c': '''
      /*
       * Zephyr SRF05 driver (trigger-echo ultrasonic distance sensor).
       * Generated by demol — uses the shared trigger_echo_init /
       * trigger_echo_read macros from _macros.j2.
       *
       * Note: SRF05 is timing-compatible with SRF04; the same trigger-then-
       * measure-echo protocol applies.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "srf05.h"
      
      static int trigger_echo_init_d3_d4(const struct device *dev)
      {
          ARG_UNUSED(dev);
          if (!device_is_ready(dev)) {
              return -ENODEV;
          }
          return 0;
      }
      static int32_t trigger_echo_read_d3_d4(const struct device *dev, uint32_t timeout_us)
      {
          ARG_UNUSED(dev);
          ARG_UNUSED(timeout_us);
          /* Set trigger high for 10us, measure echo pulse width.
           *
           * The full GPIO + cycle-counter shim is filled in by the user
           * when porting to a specific board. The skeleton is intentionally
           * left as a documented stub so the template renders for every
           * trigger-echo device without compiling device-specific includes.
           */
          return 0;
      }
      
      static const struct gpio_dt_spec srf05_trigger = GPIO_DT_SPEC_GET(DT_INST(0, gpio_trigger), gpios);
      static const struct gpio_dt_spec srf05_echo    = GPIO_DT_SPEC_GET(DT_INST(0, gpio_echo),    gpios);
      static const struct device *srf05_dev          = DEVICE_DT_GET(DT_INST(0, gpio_trigger));
      
      int srf05_init(void)
      {
          return trigger_echo_init_d3_d4(srf05_dev);
      }
      
      int srf05_read_cm(uint32_t timeout_us)
      {
          ARG_UNUSED(srf05_trigger);
          ARG_UNUSED(srf05_echo);
          return trigger_echo_read_d3_d4(srf05_dev, timeout_us);
      }
    ''',
  })
# ---
